--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,10 @@
     font-size: 60px;
     font-weight: 700;
   }
+  button {
+    background-color: #9b795d;
+    color: black;
+    font-weight: 600;
+    border-radius: 10px;
+  }
 }
