--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,13 @@
     font-size: 60px;
     font-weight: 700;
   }
+  body {
+    background-color: #1f1f1d;
+    color: white;
+  }
   button {
     background-color: #9b795d;
-    color: black;
+    color: white;
     font-weight: 600;
     border-radius: 10px;
   }
